<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.login.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="?colorSecondaryVariant"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="?colorOnBackground"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="?colorOnBackground"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:text="@string/log_in_caps"
            android:textColor="?colorOnPrimary"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="?colorOutline"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <TextView
        android:id="@+id/register"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="?colorOutline"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/forgot_password"
        app:layout_constraintTop_toTopOf="@id/forgot_password" />

    <ProgressBar
        android:id="@+id/progressbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/on_surface_variant_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>