<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image_container"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        app:cardBackgroundColor="?colorSurface"
        app:cardCornerRadius="120dp"
        app:layout_constraintBottom_toTopOf="@id/email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/profile_image"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:enabled="false"
            android:inputType="none"
            android:maxWidth="300dp"
            android:maxLines="1"
            android:scrollbars="horizontal"
            android:text="@string/sample_email"
            android:textColor="?colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image_container" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="?colorOnTertiaryContainer"
        app:drawableLeftCompat="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>